<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_report_overview"
            android:icon="@drawable/ic_menu_report_overview"
            android:title="@string/menu_report_overview" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_menu_security"
            android:title="@string/menu_security" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_contact_us"
                android:title="@string/menu_contact_us" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_about_us"
                android:title="@string/menu_about_us" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
