<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="?attr/colorPrimary" />

            <TextView
                android:id="@+id/txt_app_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_description"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="?attr/colorPrimary" />

            <TextView
                android:id="@+id/txt_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/karimi1064_yahoo_com"
                android:textAlignment="center"
                android:textIsSelectable="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="?attr/colorPrimary" />

            <TextView
                android:id="@+id/txt_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_developer"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_my_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maryam_karimi"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>