<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="?attr/colorAccent"
        android:orientation="horizontal"
        android:padding="14dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/personnel_code" />

                <TextView
                    android:id="@+id/txt_pl_code"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="?attr/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/first_name" />

                <TextView
                    android:id="@+id/txt_pl_name"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="?attr/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/last_name" />

                <TextView
                    android:id="@+id/txt_pl_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_enter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="7dp"
                android:background="?attr/colorPrimary"
                android:text="@string/enter" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="7dp"
                android:background="?attr/colorPrimary"
                android:text="@string/exit" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
