<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:weightSum="9"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:text="@string/create_personnel" />

            <ImageButton
                android:id="@+id/btn_create_personnel"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_create_person"
                android:contentDescription="@string/create_personnel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:text="@string/personnel_list" />

            <ImageButton
                android:id="@+id/btn_personnel_list"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:layout_marginEnd="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_personnel_list"
                android:contentDescription="@string/personnel_list" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:text="@string/manage_personnel" />

            <ImageButton
                android:id="@+id/btn_manage_personnel"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:layout_marginEnd="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_manage_personnel"
                android:contentDescription="@string/manage_personnel" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>